--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -30,7 +30,7 @@
 .Header button {
     padding: 8px 20px;
     font-size: 20px;
-    background: #56CCF2;
+    background: orange;
     border-radius: 10px;
     border: none;
     font-weight: 700;
